# OpenGL-Platformer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  README.md  build.sh  configure.sh  merge_submodules.sh  run.sh
assets/: example.tmx  tutorial.tmx
assets/Animations/: PlayerAnimations.json  PlayerAnimations_platformer.json
assets/Levels/: level_0.lvl  levels.json
assets/animations/: PlayerAnimations_platformer.json
assets/animations/one_time/: .sheet.kra-autosave.kra  properties.json  sheet.kra  sheet.png~
assets/animations/player/: after_jump.png~
assets/sprites/: HUD.kra  particle.png~
assets/textures/: .menu_9patch.png-autosave.kra  menu_9patch.kra  menu_9patch.kra~  menu_9patch.png~
assets/tilemaps/: checkpoint.tsx  coin_anim_strip_6.tsx  environment.tsx  map1.tmx  save_point_anim_strip_9.tsx  tutorial.tmx  waterfall.tsx  waterfall_anim_down.tsx  weeds_props.tsx
assets/tilemaps/map1/: environment.tsx  map1.tmx  tiki torch.tsx
assets/tilemaps/test/: environment.tsx  test.tmx  torches.tsx  waterfall_anim_strip_4.tsx
include/: Tmx.h  TmxEllipse.h  TmxMap.h  TmxMapTile.h  TmxObject.h  TmxObjectGroup.h  TmxPolygon.h  TmxPolyline.h  TmxPropertySet.h  TmxTile.h  TmxTileset.h  stb_image.h
include/glad/: glad.h
lib/Debug/: freetyped.lib  glfw3d.lib  tinyxml2d.lib  zlibstaticd.lib
lib/Release/: freetype.lib  glfw3.lib  tinyxml2.lib  tmxparser.lib  zlibstatic.lib
src/: CMakeLists.txt  Filesystem.cpp  Geom = glCreateShader(GL_GEOMETRY_SHADER);  PostProcessor.cpp  TextRenderer.cpp  basic_renderer.cpp  config.h.in  config.h.in.bak  glad.c  main.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  stb_image_write.cpp  texture.cpp  tileCamera2D.cpp  tilemap.cpp  tilemap_renderer.cpp
src/Physics2D/: CMakeLists.txt  Colliders.cpp  PhysicsWorld.cpp  PhysicsWorld_quadtree.cpp  RigidBody.cpp
src/Physics2D/colliders/: CapsuleCollider.cpp  Collider.cpp  CollisionTests.cpp  PolygonCollider.cpp  RectangleCollider.cpp
src/Physics2D/include/: AABB.hpp  Colliders.h  MeterUnitConverter.hpp  Physics2D.h  PhysicsWorld.h  RigidBody.h
src/Physics2D/include/colliders/: CapsuleCollider.h  CircleCollider.h  Collider.h  CollisionTests.h  PolygonCollider.h  RectangleCollider.h
src/camera/: tileCamera2D.cpp
src/game/: AnimatedSprite.cpp  AnimationManager.cpp  GameLevel.cpp  GameLevel_GameManager.cpp  GameLevelsManager.cpp  InGameHUD.cpp  ParticleGenerator.cpp  Player.cpp  SingleAnimations.cpp  Sprite.cpp  TileSpace.cpp  game.cpp
src/game/states/: ActiveLevelState.cpp  DrawLevelState.cpp  InLevelState.cpp  MainMenuState.cpp
src/include/: AtlasTextRenderer.hpp  BasicObserverSubject.hpp  CommandIDs.h  DebugColors.h  Filesystem.h  Helper.hpp  IAnimated.h  InputInterface.hpp  MenuInputHandler.hpp  MenuSystem.hpp  PostProcessor.h  TextRenderer.h  Timer.hpp  basic_renderer.h  menu.hpp  resource_manager.h  shader.h  sprite_renderer.h  texture.h  tileCamera2D.h  tilemap.h  tilemap_renderer.h
src/include/Interfaces/: ITileSpace.h
src/include/camera/: Icamera.h  tileCamera2D.h
src/include/game/: AnimatedSprite.h  AnimationManager.h  Dialog.hpp  Forms.hpp  GameEvents.h  GameLevel.h  GameLevelsManager.h  GameObject.h  GameStates.h  InGameHUD.h  ParticleGenerator.h  Player.h  SingleAnimations.h  Sprite.h  TileSpace.h  game.h
src/include/interfaces/: Observer.h
src/shaders/: BasicRender.vert  SpriteRender.frag  SpriteRender.vert  particle.frag  particle.vert  post_processing.frag  post_processing.vert  text_2d.frag  text_2d.vert  tile_render.frag  tile_render.vert
